# xorg-xorgproto

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  Changelog  FS.h  FSproto.h  INSTALL  Makefile  Makefile.am  Makefile.in  Print.h  Printstr.h  README  README.md  XF86keysym.h  XI.h  XI2.h  XI2proto.h  XI2proto.txt  XInput.h  XIproto.h  XKB.h  XKBgeom.h  XKBsrv.h  XKBstr.h  XResproto.h  Xeviestr.h  Xfuncproto.h.in  Xinerama.h  Xpoll.h.in  Xv.h  XvMC.h  XvMCproto.h  Xvproto.h  applewm.h  applewmconst.h  applewmstr.h  (+106 more)
CVS/: Entries  Repository  Root
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
bigreqsproto/: autogen.sh
calibrateproto/: Makefile.am
compositeproto/: .gitignore
dri3proto/: .gitignore  README  autogen.sh
evieproto/: README  configure.ac
fixesproto/: autogen.sh
fontcacheproto/: .gitignore
include/GL/: glxproto.h
include/X11/: XF86keysym.h  Xfuncproto.h.in  Xmd.h  Xwindows.h  Xwinsock.h  keysymdef.h
include/X11/dri/: xf86driproto.h
include/X11/extensions/: meson.build  randr.h  saverproto.h  xtrapdi.h
inputproto/: .gitignore  autogen.sh
lg3dproto/: Makefile.am  README
pmproto/: .gitignore
randrproto/: autogen.sh
recordproto/: .gitignore  autogen.sh
renderproto/: configure.ac
scripts/: keysym-generator.py
scrnsaverproto/: autogen.sh  configure.ac
specs/: .gitignore  Makefile.am  XI2proto.txt  XIproto.txt  appA.xml  appB.xml  appC.xml  appD.xml  bigreq.xml  ch01.xml  ch02.xml  ch03.xml  ch04.xml  ch05.xml  ch06.xml  ch07.xml  ch08.xml  ch09.xml  ch10.xml  ch11.xml  ch12.xml  ch13.xml  ch14.xml  ch15.xml  ch16.xml  encoding.xml  fsproto.xml  glossary.xml  keysyms.xml  record.xml  saver.xml  sect1-9.xml  x11protocol.xml  xc-misc.xml  xkbproto.xml
trapproto/: .gitignore  Makefile.am  README
videoproto/: .gitignore  autogen.sh
windowswmproto/: Makefile.am  configure.ac
xf86bigfontproto/: .gitignore
xf86dgaproto/: .gitignore
xf86miscproto/: .gitignore  configure.ac
xf86rushproto/: .gitignore  Makefile.am
xf86vidmodeproto/: configure.ac
xineramaproto/: .gitignore  README  autogen.sh
